# Darwin

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_msvc.bat  configure_msvc.bat  installer.iss  package_macos.sh  resources.qrc  run.sh
docs/: architecture.md  class_diagram.md  coding_standards.md  data_flow.md  macos_support_design.md  supplementary_designs.md  task_list.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioEngineBackend.cpp  AudioEngineBackend.h  AudioExporter.cpp  AudioInputCapture.cpp  AudioInputCapture.h  AudioInputCaptureBackend.cpp  AudioInputCaptureBackend.h
src/commands/: UndoCommands.cpp  UndoCommands.h
src/common/: AudioFileReader.cpp  AudioFileReader.h  ChordDetector.h  Constants.h  FontManager.cpp  FontManager.h  ModelAccessLock.cpp  ModelAccessLock.h  ThemeManager.cpp  ThemeManager.h  WavWriter.cpp  WavWriter.h
src/controllers/: MidiInputDevice.cpp  MidiInputDevice.h  PlaybackController.cpp  PlaybackController.h
src/models/: CCEvent.cpp  CCEvent.h  Clip.cpp  Clip.h  Project.cpp  Project.h  Track.cpp  Track.h
src/plugins/: VST3MetadataProbe.cpp  VST3MetadataProbe.h  VST3PluginInstance.cpp  VST3PluginInstance.h  VST3Scanner.cpp
src/views/arrangement/: ArrangementGridWidget.cpp  ArrangementGridWidget.h  ArrangementGridWidget_Animation.cpp  ArrangementGridWidget_DragDrop.cpp  ArrangementGridWidget_Input.cpp  ArrangementGridWidget_Painting.cpp  ArrangementView.cpp  ArrangementView_DragDrop.cpp  ArrangementView_Headers.cpp  TimelineWidget.cpp  TimelineWidget.h
src/views/compose/: ComposeView.cpp  ComposeView.h
src/views/mix/: MixView.cpp
src/views/pianoroll/: ExpressionLaneWidget.cpp  ExpressionLaneWidget.h  PianoRollGridWidget.cpp  PianoRollGridWidget.h  PianoRollGridWidget_Input.cpp  PianoRollGridWidget_Painting.cpp  PianoRollView.cpp  PianoRollView.h  VelocityLaneWidget.cpp  VelocityLaneWidget.h
src/views/plugineditor/: MacNativeViewUtils.h  MacNativeViewUtils.mm  PluginEditorWidget.cpp  PluginEditorWidget.h
src/views/source/: PluginLoadOverlay.cpp  ScanSpinnerWidget.cpp  SourceView.cpp
src/widgets/: CustomTooltip.cpp  ExportProgressDialog.cpp  FaderWidget.cpp  IconButton.h  KnobWidget.cpp  MixerChannelWidget.cpp  MixerChannelWidget.h  ProjectLoadDialog.cpp  RecordModeButton.cpp  RecordModeButton.h
tests/: TestCommon.cpp  TestMain.cpp  TestModels.cpp  TestUndoCommands.cpp
